# predict-event-pg

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 79d93bd1105b_workspace_children.py  7bfc894a4073_initial_jobs_table.py  a1b2c3d4e5f6_add_audit_log_table.py  b2c4f7e8a1d3_workflow_runs_and_job_idempotency.py  b92a4058efa8_workspaces_table.py  c68fbb0ebfda_thesis_trio.py
backend/app/: audit.py  celery_app.py  config.py  dependencies.py  errors.py  main.py
backend/app/cwg/: tasks.py
backend/app/db/: base.py  session.py
backend/app/integrations/: base.py  browser_use.py  crustdata.py  unipile.py
backend/app/llm/: anthropic_provider.py  openai_provider.py  provider.py  roles.py  router.py
backend/app/middleware/: cognito.py  correlation.py
backend/app/models/: __init__.py  audit.py  best_customer.py  gtm_thesis.py  job.py  persona.py  sales_material.py  target_market.py  workflow.py  workspace.py
backend/app/orchestration/: agent.py  checkpointer.py  langgraph_orchestrator.py  policy.py  workflow.py
backend/app/providers/: __init__.py  company_discovery.py  company_enrichment.py  person_enrichment.py  social_search.py  web_extraction.py
backend/app/repositories/: __init__.py  base.py  job.py  workflow.py
backend/app/s3/: client.py
backend/app/tasks/: base.py
backend/scripts/: ensure_s3_versioning.py
backend/tests/: conftest.py  test_audit.py  test_celery_app.py  test_dependencies.py  test_errors.py  test_health.py
frontend/: .env.example  (+7 more)
(+62 files in other folders)
