[tool.poetry]
name = "predict-backend"
version = "0.1.0"
description = "PREDICT Event backend API and worker"
authors = ["Fabio Debus <fabio@predict-ability.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115,<0.116"
uvicorn = {extras = ["standard"], version = ">=0.30"}
sqlmodel = "0.0.24"
sqlalchemy = ">=2.0.14,<2.1"
alembic = "1.15.2"
asyncpg = ">=0.29"
pydantic-settings = ">=2.0"
celery = "5.5.3"
kombu = ">=5.5,<5.6"
redis = ">=4.5.2,<5.3"
langgraph = "^1.1"
langgraph-checkpoint = "^4.0"
langgraph-checkpoint-postgres = "^3.0"
httpx = ">=0.27"
tenacity = ">=8.2"
boto3 = ">=1.34"
python-jose = {extras = ["cryptography"], version = ">=3.3"}
anthropic = ">=0.30"
openai = ">=1.40"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
respx = ">=0.21"
moto = {extras = ["s3"], version = ">=5.0"}
httpx = ">=0.27"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
